2018-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (ReadBlob, WriteBlob): gzread(), BZ2_bzread(),
	gzwrite(), BZ2_bzwrite() return type 'int' rather than 'size_t'
	like their stdio equivalents.  Use correct signed type to avoid
	returning a negative value into an unsigned type, forming a huge
	positive value.  Fixes oss-fuzz 8600
	"graphicsmagick/coder_MAT_fuzzer: Heap-buffer-overflow in
	ReadBlobLSBDoubles". (Credit to OSS-Fuzz)

2018-06-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (png_read_raw_profile): Try to shore up parsing of
	raw profile reading to avoid heap read overruns.  Fixes oss-fuzz
	8763 "graphicsmagick/coder_PNG32_fuzzer: Heap-buffer-overflow in
	png_read_raw_profile". (Credit to OSS-Fuzz)

2018-06-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Reduce stack usage for 64 bit architecture.

2018-06-06  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c Check return values of SeekBlob for more safety.

2018-06-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Use DestroyImageList() rather
	than DestroyImage() on returned Image from supposed read of JPEG
	data, in case multiple frames were unexpectedly returned.  Also
	add "JPEG:" prefix to filename when reading from temporary file to
	force that it can only be read as a JPEG file, disabling format
	auto-detection based on file header.  Fixes oss-fuzz 8755
	"graphicsmagick/coder_JNG_fuzzer: Indirect-leak in
	AllocateImage". (Credit to OSS-Fuzz)

2018-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (EOFBlob): Implement EOF detection for ZipStream.
	Does some archaic zlib not provide gzeof()?  Fixes oss-fuzz 8550
	"graphicsmagick/coder_MAT_fuzzer: Timeout in
	graphicsmagick_coder_MAT_fuzzer". (Credit to OSS-Fuzz)

2018-06-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Skip adding empty raw profile.