@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180608"
-#define public MagickPackageReleaseDate "snapshot-20180608"
+#define public MagickPackageVersionAddendum ".020180609"
+#define public MagickPackageReleaseDate "snapshot-20180609"
